--- a/app/templates/spoonacular/view_recipe.html
+++ b/app/templates/spoonacular/view_recipe.html
@@ -5,7 +5,7 @@
     <div class="col-md-8 col-md-offset-2">
         <div class = "row round_div" style="padding-top: 2em">
             <h1>{{  title  }}</h1>
-            <form action="/addtorecipebox" method="POST">
+            <form action="/spoonacular/addtorecipebox" method="POST">
                 <div class="form-group">
                     <input type="hidden" name="party_diets" value="{{  newdiets  }}">
                     <input type="hidden" name="party_avoids" value="{{  avoids  }}">
