Debugging registration complete. Next thing to check is email registration

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -135,13 +135,6 @@
     </div>
 
 
-
-
-
-
-
-
-
     <div class="col-md-4">
         <div class = "row round_hidden_div" style="padding-top: 2em">
 
@@ -164,7 +157,7 @@
                     <a href="/auth/clear" role="button" title="Removes everything you have added to your profile, for a fresh start" class="btn btn-xs btn-warning pull-right">start over</a>
                 </div>
                 <div class="col">
-                    <input type=submit class="btn btn-success btn-lg pull" value=Register>
+                    <input type="submit" class="btn btn-success btn-lg pull" value="Register">
                 </div>
 
             </div>
