--- a/app/templates/_formhelpers.html
+++ b/app/templates/_formhelpers.html
@@ -1,5 +1,5 @@
 {% macro render_field(field) %}
-  <dt>{{ field.label }}
+  <dt>{{ field.label }}:
   <dd>{{ field(**kwargs)|safe }}
     
   {% if field.errors %}
@@ -14,7 +14,7 @@
 
 
 {% macro render_inline_field(field) %}
-  {{ field.label }}&emsp;{{ field(**kwargs)|safe }}
+  {{ field.label }}:&emsp;{{ field(**kwargs)|safe }}
   {% if field.errors %}
     <ul class=errors>
     {% for error in field.errors %}
@@ -32,6 +32,12 @@
   </label>
 </div>
 {%- endmacro %}
+
+def flash_errors(form):
+    for field, errors in form.errors.items():
+        for error in errors:
+            flash(u"Error in the <strong>%s</strong> field - %s" %
+                  (getattr(form, field).label.text, error), 'danger')
 
 <!-- http://bear-z.com/python/render-bootstrap-3-forms-with-wtforms-and-jinja/
  -->
