--- a/app/templates/anonymous.html
+++ b/app/templates/anonymous.html
@@ -61,15 +61,22 @@
           <!-- ------------ -->
 
             <div class="container-fluid">
-                <div class="container">
-                  {% with messages = get_flashed_messages(with_categories=true) %}
-                    {% if messages %}
-                      {% for category, message in messages %}
-                        <div class="alert alert-{{ category }}">{{ message }}</div>
-                      {% endfor %}
-                    {% endif %}
-                  {% endwith %}
-                </div></div>
+              <div class="container-fluid">
+                  <div class="container">
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                      {% if messages %}
+                        {% for category, message in messages %}
+                              {% if category is equalto 'message' %}
+                                  <div class="alert alert-info">{{ message }}</div>
+                              {% else %}
+                                  <div class="alert alert-{{ category }} alert-dismissible" role="alert">{{ message }}
+                                  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+                              {% endif %}
+                        {% endfor %}
+                      {% endif %}
+                    {% endwith %}
+                  </div>
+              </div>
 
             {% block content %}
 
